# sparse-capability-transplants

./: .gitignore  CITATION.cff  Makefile  README.md  pyproject.toml
docs/: CLAIMS_MATRIX.md  EVALUATION_PLAN.md  METHOD_SPEC.md  REPRODUCIBILITY_AND_ENV.md  RESEARCH_BRIEF.md
paper/: README.md  main.tex  references.bib
paper/tables/: appendix_error_profile.tex  appendix_examples.tex  appendix_slice_breakdown.tex  localization.tex  main_results.tex
scripts/: task.py
src/: __init__.py  cli.py
src/analysis/: __init__.py  donor_gap_gate.py  error_analysis.py  eval_layer_candidate.py  export_final_registry.py  (+10 more)
tests/: test_alias_bank.py  test_cache_activations.py  test_config.py  test_control_eval.py  test_control_suite.py  test_error_analysis.py  test_eval_layer_candidate.py  test_eval_run.py  test_example_id.py  test_fit_same_size_transplant.py  test_freeze_eval_artifacts.py  test_golden_fixtures.py  test_hooks.py  test_leakage_audit.py  test_load_gemma.py  test_manifest_writer.py  test_metrics.py  test_multiseed_dense_control.py  test_multiseed_same_size.py  test_normalize_args.py  test_paper_closeout_artifacts.py  test_param_budget.py  test_parse_json.py  test_parse_mobile_actions.py  test_progress.py  test_prompt_contract.py  test_prune_features.py  test_rank_layers.py  test_run_manifest.py  test_schema_shift.py  test_seed.py  test_shortcut_controls.py  test_smoke_cli.py  test_smoke_data.py  test_split_policy.py  test_summarize_baselines.py  test_token_span_labeling.py  test_train_delta_module.py  test_train_donor_fullft.py  test_train_recipient_fullft.py  (+2 more)
(+41 files in other folders)
